// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Publication Details Component  should not render component with empty publication 1`] = `""`;

exports[`Publication Details Component  should render component 1`] = `
<StandardCard
  className=""
  title="Publication details"
>
  <Table
    allRowsSelected={false}
    className="publicationDetails vertical"
    fixedFooter={true}
    fixedHeader={true}
    height="inherit"
    multiSelectable={false}
    selectable={false}
  >
    <TableBody
      allRowsSelected={false}
      deselectOnClickaway={true}
      displayRowCheckbox={false}
      multiSelectable={false}
      preScanRows={true}
      selectable={true}
      style={Object {}}
    >
      <ViewRecordTableRow
        data="Journal Article"
        heading="Publication type"
      />
      <ViewRecordTableRow
        data="Article (original research)"
        heading="Sub-type"
      />
      <ViewRecordTableRow
        data={
          <ul>
            <li>
              <a
                href="https://fez-staging.library.uq.edu.au/records/search?page=1&pageSize=20&sortBy=published_date&sortDirection=Desc&searchQueryParams%5Ball%5D=School+of+Chemistry+and+Molecular+Biosciences"
              >
                School of Chemistry and Molecular Biosciences
              </a>
            </li>
            <li>
              <a
                href="https://fez-staging.library.uq.edu.au/records/search?page=1&pageSize=20&sortBy=published_date&sortDirection=Desc&searchQueryParams%5Ball%5D=HERDC+Pre-Audit"
              >
                HERDC Pre-Audit
              </a>
            </li>
            <li>
              <a
                href="https://fez-staging.library.uq.edu.au/records/search?page=1&pageSize=20&sortBy=published_date&sortDirection=Desc&searchQueryParams%5Ball%5D=UQ+Centre+for+Clinical+Research+Publications"
              >
                UQ Centre for Clinical Research Publications
              </a>
            </li>
          </ul>
        }
        heading="Collections"
      />
    </TableBody>
  </Table>
</StandardCard>
`;

exports[`Publication Details Component  should render with publication without collection data 1`] = `
<StandardCard
  className=""
  title="Publication details"
>
  <Table
    allRowsSelected={false}
    className="publicationDetails vertical"
    fixedFooter={true}
    fixedHeader={true}
    height="inherit"
    multiSelectable={false}
    selectable={false}
  >
    <TableBody
      allRowsSelected={false}
      deselectOnClickaway={true}
      displayRowCheckbox={false}
      multiSelectable={false}
      preScanRows={true}
      selectable={true}
      style={Object {}}
    >
      <ViewRecordTableRow
        data="Journal Article"
        heading="Publication type"
      />
    </TableBody>
  </Table>
</StandardCard>
`;

exports[`Publication Details Component  should render with publication without subtype data 1`] = `
<StandardCard
  className=""
  title="Publication details"
>
  <Table
    allRowsSelected={false}
    className="publicationDetails vertical"
    fixedFooter={true}
    fixedHeader={true}
    height="inherit"
    multiSelectable={false}
    selectable={false}
  >
    <TableBody
      allRowsSelected={false}
      deselectOnClickaway={true}
      displayRowCheckbox={false}
      multiSelectable={false}
      preScanRows={true}
      selectable={true}
      style={Object {}}
    >
      <ViewRecordTableRow
        data="Journal Article"
        heading="Publication type"
      />
      <ViewRecordTableRow
        data={
          <ul>
            <li>
              <a
                href="https://fez-staging.library.uq.edu.au/records/search?page=1&pageSize=20&sortBy=published_date&sortDirection=Desc&searchQueryParams%5Ball%5D=School+of+Chemistry+and+Molecular+Biosciences"
              >
                School of Chemistry and Molecular Biosciences
              </a>
            </li>
            <li>
              <a
                href="https://fez-staging.library.uq.edu.au/records/search?page=1&pageSize=20&sortBy=published_date&sortDirection=Desc&searchQueryParams%5Ball%5D=HERDC+Pre-Audit"
              >
                HERDC Pre-Audit
              </a>
            </li>
            <li>
              <a
                href="https://fez-staging.library.uq.edu.au/records/search?page=1&pageSize=20&sortBy=published_date&sortDirection=Desc&searchQueryParams%5Ball%5D=UQ+Centre+for+Clinical+Research+Publications"
              >
                UQ Centre for Clinical Research Publications
              </a>
            </li>
          </ul>
        }
        heading="Collections"
      />
    </TableBody>
  </Table>
</StandardCard>
`;
